--- a/WolvenKit/Views/Shell/DockingAdapter.xaml
+++ b/WolvenKit/Views/Shell/DockingAdapter.xaml
@@ -15,8 +15,9 @@
  d:DataContext="{d:DesignInstance Type={x:Type shell:AppViewModel}}"
  d:DesignHeight="300"
  d:DesignWidth="300"
- mc:Ignorable="d"             
- >
+ mc:Ignorable="d"
+ Loaded="DockingAdapterOnLoaded"
+>
     <Grid>
         <Grid.Resources>
             <ControlTemplate x:Key="WolvenKitButtonsTemplate" TargetType="{x:Type ToggleButton}">
@@ -56,11 +57,13 @@
             AllowProportionalResize="True"
             PersistState="True"
             IsNative="True"
-            UseNativeFloatWindow="False"
+            ShowFloatWindowInTaskbar="True"
+            UseNativeFloatWindow="True"
             UseDocumentContainer="True"
             Loaded="PART_DockingManager_Loaded"
             CloseButtonClick="PART_DockingManagerOnCloseButtonClick"
-            DockStateChanging="PART_DockingManagerOnDockStateChanging">
+            DockStateChanging="PART_DockingManagerOnDockStateChanging"
+            DockStateChanged="PART_DockingManagerOnDockStateChanged">
             <!--syncfusion:DockingManager.Resources>
                 <Style TargetType="{x:Type ContentPresenter}">
                     <Setter Property="Margin" Value="-1" />
