--- a/WolvenKit/Views/Documents/RDTMeshView.xaml
+++ b/WolvenKit/Views/Documents/RDTMeshView.xaml
@@ -7,6 +7,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:documents="clr-namespace:WolvenKit.ViewModels.Documents;assembly=WolvenKit.App"
     xmlns:dxControls="clr-namespace:Ab3d.DirectX.Controls;assembly=Ab3d.DXEngine.Wpf"
+    xmlns:editors="clr-namespace:WolvenKit.Views.Editors"
     xmlns:hx="http://helix-toolkit.org/wpf/SharpDX"
     xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
     xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
@@ -223,6 +224,72 @@
                         ItemsSource="{Binding SelectedAppearance.LODLUT.Keys, Mode=OneWay}"
                         SelectedItem="{Binding SelectedAppearance.SelectedLOD, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                 </Grid>
+                <TextBlock
+                    Margin="5,6,0,3"
+                    VerticalAlignment="Center"
+                    Text="Search Coordinate:" />
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="20" />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock
+                        Margin="5,0,0,0"
+                        VerticalAlignment="Center"
+                        Text="X: " />
+                    <editors:RedFloatEditor
+                        Grid.Column="1"
+                        Height="24"
+                        RedNumber="{Binding SearchPoint.X, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                </Grid>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="20" />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock
+                        Margin="5,0,0,0"
+                        VerticalAlignment="Center"
+                        Text="Y: " />
+                    <editors:RedFloatEditor
+                        Grid.Column="1"
+                        Height="24"
+                        RedNumber="{Binding SearchPoint.Y, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                </Grid>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="20" />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock
+                        Margin="5,0,0,0"
+                        VerticalAlignment="Center"
+                        Text="Z: " />
+                    <editors:RedFloatEditor
+                        Grid.Column="1"
+                        Height="24"
+                        RedNumber="{Binding SearchPoint.Z, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                </Grid>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Button
+                        Grid.Column="0"
+                        Margin="5,5,2.5,0"
+                        HorizontalAlignment="Stretch"
+                        Command="{Binding SearchForPointCommand}"
+                        Content="Search for Coordinate" />
+                    <Button
+                        Grid.Column="1"
+                        Height="24"
+                        Margin="2.5,5,5,0"
+                        HorizontalAlignment="Stretch"
+                        Command="{Binding ClearSearchCommand}"
+                        Content="Clear Search" />
+                </Grid>
+
                 <!--  Button Click="ReloadModels" Content="Zoom to Extents" /  -->
                 <Button
                     Width="200"
