Changed red.db for faster search times Added option to search for referenced files

--- a/WolvenKit/Views/Tools/AssetBrowserView.xaml
+++ b/WolvenKit/Views/Tools/AssetBrowserView.xaml
@@ -339,6 +339,7 @@
                                             Visibility="Collapsed" />
                                     </MenuItem>
                                     <Separator />
+                                    <MenuItem x:Name="RightContextMenuFindUsesMenuItem" Header="Find used files" />
                                     <MenuItem x:Name="RightContextMenuFindUsingMenuItem" Header="Find files using this" />
                                     <MenuItem x:Name="RightContextMenuCopyPathMenuItem" Header="Copy Relative Path" />
                                 </ContextMenu>
