--- a/WolvenKit/Views/Editors/RedTypeView.xaml
+++ b/WolvenKit/Views/Editors/RedTypeView.xaml
@@ -299,7 +299,7 @@
                 </converters:RedEditorTemplateSelector.RedColorEditor>
                 <converters:RedEditorTemplateSelector.RedCurveEditor>
                     <DataTemplate>
-                        <editors:RedCurveEditor RedCurve="{Binding Data, Mode=TwoWay}" />
+                        <editors:RedCurveEditor DataContext="{Binding}" />
                     </DataTemplate>
                 </converters:RedEditorTemplateSelector.RedCurveEditor>
                 <converters:RedEditorTemplateSelector.RedRefEditor>
