--- a/WolvenKit/Views/Shell/MainView.xaml
+++ b/WolvenKit/Views/Shell/MainView.xaml
@@ -211,6 +211,9 @@
                     <DataTemplate DataType="{x:Type dialogVMs:SoundModdingViewModel}">
                         <dialogs:SoundModdingView ViewModel="{Binding}" />
                     </DataTemplate>
+                    <DataTemplate DataType="{x:Type dialogVMs:ModsViewModel}">
+                        <dialogs:ModsView ViewModel="{Binding}" />
+                    </DataTemplate>
                     <DataTemplate DataType="{x:Type dialogVMs:CreateClassDialogViewModel}">
                         <dialogs:CreateClassDialog ViewModel="{Binding}" />
                     </DataTemplate>
