--- a/WolvenKit/Views/HomePage/Pages/PluginsToolView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/PluginsToolView.xaml
@@ -1,11 +1,11 @@
 <reactiveUi:ReactiveUserControl
-    x:TypeArguments="dialogs:PluginsToolViewModel"
-    x:Class="WolvenKit.Views.Dialogs.PluginsToolView"
+    x:TypeArguments="homepage:PluginsToolViewModel"
+    x:Class="WolvenKit.Views.HomePage.Pages.PluginsToolView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-    xmlns:local="clr-namespace:WolvenKit.Views.Dialogs"
+    xmlns:homepage="clr-namespace:WolvenKit.ViewModels.HomePage;assembly=WolvenKit.App"
     xmlns:others="clr-namespace:WolvenKit.Views.Others"
     xmlns:reactiveUi="http://reactiveui.net"
     xmlns:hc="https://handyorg.github.io/handycontrol"
@@ -14,39 +14,77 @@
     xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
     mc:Ignorable="d" 
     d:DesignHeight="600" d:DesignWidth="800"
-    Width="800"
-    Height="600"
     Background="{StaticResource ContentBackgroundAlt3}"
-    d:DataContext="{d:DesignInstance Type=dialogs:PluginsToolViewModel}"
+    d:DataContext="{d:DesignInstance Type=homepage:PluginsToolViewModel}"
     >
 
-    <Grid Margin="20">
-
+    <Grid>
+        
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <!-- Header -->
-        <TextBlock Text="WolvenKit Plugins" FontSize="24" Grid.Row="0"/>
+        <StackPanel  Grid.Row="0"
+            Margin="25,0,5,0"
+            Height="85"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Orientation="Horizontal" >
+
+            <hc:AnimationPath
+                Width="45"
+                Height="45"
+                Data="{DynamicResource SettingsGeo}"
+                PathLength="250"
+                RenderTransformOrigin="0.5,0.5"
+                Stretch="Uniform"
+                Stroke="{DynamicResource MahApps.Brushes.ThemeForeground}"
+                StrokeThickness="1.5"
+                Duration="00:00:08"
+                >
+                <hc:AnimationPath.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform />
+                        <SkewTransform />
+                        <RotateTransform Angle="180" />
+                        <TranslateTransform />
+                    </TransformGroup>
+                </hc:AnimationPath.RenderTransform>
+            </hc:AnimationPath>
+
+            <hc:Divider
+                Height="50"
+                Margin="15"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Orientation="Vertical"
+                />
+            <TextBlock Text="Plugins"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                FontSize="20"
+                Foreground="White" />
+
+        </StackPanel>
 
         <!-- Separator -->
         <Separator Grid.Row="1"/>
 
         <!-- Buttons -->
-        <Grid Grid.Row="2">
+        <Grid Grid.Row="2" Margin="10,0,0,0">
             
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-            
-            <Button Grid.Column="0" Command="{Binding SyncCommand}" Margin="0,10,0,0" >
-                <StackPanel Orientation="Horizontal">
-                    <iconPacks:PackIconMaterial Kind="Sync" Width="30" Height="30" Foreground="CadetBlue" />
+
+            <Button Grid.Column="0" Command="{Binding SyncCommand}" Margin="0,10,0,0"  >
+                <StackPanel Orientation="Horizontal" >
+                    <iconPacks:PackIconMaterial Kind="Sync"  Foreground="CadetBlue" />
                     <TextBlock Text="Check for Updates" FontSize="16" VerticalAlignment="Center" Margin="5,0,10,0"/>
                 </StackPanel>
             </Button>
@@ -54,14 +92,14 @@
         </Grid>
 
         <!-- Main grid -->
-        <ListBox Grid.Row="3" x:Name="PluginList" HorizontalContentAlignment="Stretch" Margin="25"
+        <ListBox Grid.Row="3" x:Name="PluginList" HorizontalContentAlignment="Stretch" Margin="10"
                  ItemsSource="{Binding _pluginService.Plugins, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                  d:ItemsSource="{d:SampleData ItemCount=5}"
                  SelectedItem="{Binding SelectedPlugin}">
-            
+
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <Grid Height="85" IsEnabled="{Binding IsEnabled}" >
+                    <Grid IsEnabled="{Binding IsEnabled}" >
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*"/>
                             <RowDefinition Height="Auto"/>
@@ -70,10 +108,9 @@
                         <Grid Grid.Row="0">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="4*"/>
-                                <ColumnDefinition Width="50"/>
+                                <ColumnDefinition Width="Auto"/>
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
-
 
                             <StackPanel Grid.Column="0">
                                 <TextBlock Text="{Binding Name}" FontSize="20"/>
@@ -81,21 +118,28 @@
                                 <TextBlock Text="{Binding Description}" FontSize="14"/>
                             </StackPanel>
 
-                            <Button Grid.Column="1" Command="{Binding InstallCommand}"
+                            <Button Grid.Column="1" Command="{Binding InstallCommand}" 
+                                    Padding="1" Height="50" Width="50" Margin="0"
                                     Visibility="{Binding IsUpdateAvailable, Converter={StaticResource boolToVisibilityConverter}}"
                                     Background="Transparent" BorderBrush="Transparent">
-                                <iconPacks:PackIconMaterial Kind="Download" Width="30" Height="30" Foreground="CadetBlue" />
+                                <iconPacks:PackIconMaterial Kind="Download" Foreground="CadetBlue"
+                                                            Height="30" Width="30"/>
                             </Button>
                             <Button Grid.Column="1"
+                                    Padding="1" Height="50" Width="50" Margin="0"
                                     Visibility="{Binding IsNoUpdateAvailable, Converter={StaticResource boolToVisibilityConverter}}"
                                     Background="Transparent" BorderBrush="Transparent">
-                                <iconPacks:PackIconMaterial Kind="Check" Width="30" Height="30" Foreground="LawnGreen" />
+                                <iconPacks:PackIconMaterial Kind="Check" Foreground="LawnGreen"
+                                                            Height="30" Width="30"/>
                             </Button>
 
-                            <StackPanel Grid.Column="2">
-                                <Button Content="{Binding Label}" Margin="4" Command="{Binding InstallCommand}"/>
-                                <Button Content="Open" Margin="4" IsEnabled="{Binding IsOpenEnabled}" Command="{Binding OpenCommand}"/>
-                                <Button Content="Remove" Margin="4" IsEnabled="{Binding IsOpenEnabled}" Command="{Binding RemoveCommand}"/>
+                            <StackPanel Grid.Column="2" Margin="5">
+                                <Button Padding="1" Margin="1" Height="20" Width="70"
+                                        Content="{Binding Label}" Command="{Binding InstallCommand}"/>
+                                <Button Padding="1" Margin="1" Height="20" Width="70"
+                                        Content="Open"  IsEnabled="{Binding IsOpenEnabled}" Command="{Binding OpenCommand}"/>
+                                <Button Padding="1" Margin="1" Height="20" Width="70"
+                                        Content="Remove"  IsEnabled="{Binding IsOpenEnabled}" Command="{Binding RemoveCommand}"/>
                             </StackPanel>
                         </Grid>
 
@@ -108,19 +152,9 @@
                     </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
-           
+
         </ListBox>
 
-        <!-- Footer -->
-        <Grid Grid.Row="4"  Height="28" Margin="0,10,0,0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>
-
-            <Button Grid.Column="2" Content="Cancel" Command="{Binding CancelCommand}" Margin="10,0,0,0" Padding="12,0" HorizontalAlignment="Right"/>
-
-        </Grid>
     </Grid>
+    
 </reactiveUi:ReactiveUserControl>
